--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "prettier": "2.4.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
