--- a/backend/package.json
+++ b/backend/package.json
@@ -23,11 +23,27 @@
   },
   "homepage": "https://github.com/Dan-Lucian/fullstackopen-2021-phonebook-backend#readme",
   "devDependencies": {
-    "eslint": "^8.2.0",
+    "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.15.4",
+    "@babel/preset-react": "^7.14.5",
+    "@types/node": "^16.7.13",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-config-airbnb-typescript": "^14.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-wesbos": "^2.1.0",
+    "eslint-plugin-html": "^6.1.2",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "nodemon": "^2.0.14",
-    "prettier": "2.4.1"
+    "prettier": "^2.3.2",
+    "typescript": "^4.4.2"
   },
   "dependencies": {
     "cors": "^2.8.5",
