--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "start": "node index.js",
     "build:ui": "rm -r build && cd ../frontend && npm run build --prod && cp -r build ../backend",
     "logs:prod": "heroku logs --app afternoon-falls-38174 --tail",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest --verbose --runInBand"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.15.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.16.8",
     "@babel/preset-react": "^7.14.5",
     "@types/node": "^16.7.13",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
@@ -41,6 +43,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.14",
     "prettier": "^2.3.2",
     "typescript": "^4.4.2"
@@ -52,5 +55,8 @@
     "mongoose": "^6.0.12",
     "mongoose-unique-validator": "^3.0.0",
     "morgan": "^1.10.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
