--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=develpoment nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit",
     "build:ui": "rm -r build && cd ../frontend && npm run build --prod && cp -r build ../backend",
     "logs:prod": "heroku logs --app afternoon-falls-38174 --tail",
-    "lint": "eslint .",
-    "test": "jest --verbose --runInBand"
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -46,10 +46,12 @@
     "jest": "^27.5.1",
     "nodemon": "^2.0.14",
     "prettier": "^2.3.2",
+    "supertest": "^6.2.2",
     "typescript": "^4.4.2"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
