chore: remove unnecessary readme files

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fullstackopen-2021-phonebook-backend",
+  "name": "webdev-tests-backend",
   "version": "1.0.0",
-  "description": "The node server related to the phonebook exercise from the fullstackopen 2021 course.",
+  "description": "The node server for the webdev tests platform.",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -12,17 +12,10 @@
     "logs:prod": "heroku logs --app afternoon-falls-38174 --tail",
     "lint": "eslint ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Dan-Lucian/fullstackopen-2021-phonebook-backend.git"
-  },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Dan-Lucian/fullstackopen-2021-phonebook-backend/issues"
-  },
-  "homepage": "https://github.com/Dan-Lucian/fullstackopen-2021-phonebook-backend#readme",
+  "author": "Gaina Dan-Lucian",
+  "license": "MIT",
+  "homepage": "https://github.com/Dan-Lucian/web-dev-tests#readme",
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.15.4",
