--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
-    "dev": "cross-env NODE_ENV=develpoment nodemon index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit",
     "build:ui": "rm -r build && cd ../frontend && npm run build --prod && cp -r build ../backend",
     "logs:prod": "heroku logs --app afternoon-falls-38174 --tail",
@@ -44,6 +44,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^6.0.12",
     "mongoose-unique-validator": "^3.0.0",
     "morgan": "^1.10.0"
